# triggeralgs

./: CMakeLists.txt
cmake/: triggeralgsConfig.cmake.in
exec/: run_trivial_candidate.cxx
include/triggeralgs/: AbstractFactory.hpp  AbstractFactory.hxx  Issues.hpp  Logging.hpp  TAWindow.hpp  TPWindow.hpp  TriggerActivity.hpp  TriggerActivityFactory.hpp  TriggerActivityMaker.hpp  TriggerCandidate.hpp  TriggerCandidateFactory.hpp  TriggerCandidateMaker.hpp  TriggerDecision.hpp  TriggerDecisionMaker.hpp  TriggerObjectOverlay.hpp  TriggerPrimitive.hpp  TriggerPrimitiveMaker.hpp  Types.hpp
include/triggeralgs/ADCSimpleWindow/: TriggerActivityMakerADCSimpleWindow.hpp  TriggerCandidateMakerADCSimpleWindow.hpp
include/triggeralgs/BundleN/: TriggerActivityMakerBundleN.hpp  TriggerCandidateMakerBundleN.hpp
include/triggeralgs/ChannelAdjacency/: README.md  TriggerActivityMakerChannelAdjacency.hpp  TriggerActivityMakerTrackFinding.hpp  TriggerCandidateMakerChannelAdjacency.hpp
include/triggeralgs/ChannelDistance/: TriggerActivityMakerChannelDistance.hpp  TriggerCandidateMakerChannelDistance.hpp
include/triggeralgs/HorizontalMuon/: README.md  TriggerActivityMakerHorizontalMuon.hpp  TriggerCandidateMakerHorizontalMuon.hpp
include/triggeralgs/LowEnergyEvent/: README.md  TriggerActivityMakerLowEnergyEvent.hpp  TriggerCandidateMakerLowEnergyEvent.hpp
include/triggeralgs/MichelElectron/: TriggerActivityMakerMichelElectron.hpp  TriggerCandidateMakerMichelElectron.hpp
include/triggeralgs/PlaneCoincidence/: README.md  TriggerActivityMakerPlaneCoincidence.hpp  TriggerCandidateMakerPlaneCoincidence.hpp
include/triggeralgs/Prescale/: TriggerActivityMakerPrescale.hpp  TriggerCandidateMakerPrescale.hpp
include/triggeralgs/Supernova/: TriggerActivityMakerSupernova.hpp  TriggerCandidateMakerSupernova.hpp  TriggerDecisionMakerSupernova.hpp
include/triggeralgs/dbscan/: Hit.hpp  TriggerActivityMakerDBSCAN.hpp  TriggerCandidateMakerDBSCAN.hpp  dbscan.hpp
src/: TAWindow.cpp  TPWindow.cpp  TriggerActivityFactory.cpp  TriggerActivityMakerADCSimpleWindow.cpp  TriggerActivityMakerBundleN.cpp  TriggerActivityMakerChannelAdjacency.cpp  TriggerActivityMakerChannelDistance.cpp  TriggerActivityMakerDBSCAN.cpp  TriggerActivityMakerHorizontalMuon.cpp  TriggerActivityMakerLowEnergyEvent.cpp  TriggerActivityMakerMichelElectron.cpp  TriggerActivityMakerPlaneCoincidence.cpp  TriggerActivityMakerPrescale.cpp  TriggerActivityMakerSupernova.cpp  TriggerCandidateMakerADCSimpleWindow.cpp  TriggerCandidateMakerBundleN.cpp  TriggerCandidateMakerChannelAdjacency.cpp  TriggerCandidateMakerChannelDistance.cpp  TriggerCandidateMakerDBSCAN.cpp  TriggerCandidateMakerHorizontalMuon.cpp  TriggerCandidateMakerLowEnergyEvent.cpp  TriggerCandidateMakerMichelElectron.cpp  TriggerCandidateMakerPlaneCoincidence.cpp  TriggerCandidateMakerPrescale.cpp  TriggerCandidateMakerSupernova.cpp  TriggerDecisionMakerSupernova.cpp
src/dbscan/: Hit.cpp  Hit.hpp  Point.hpp  dbscan.cpp  dbscan.hpp
test/: CMakeLists.txt  test_factory.cxx
